# duperagent

./: .travis.yml  CMakeLists.txt  DuperAgent.cmake.in  LICENSE  README.md  com_cutehacks_duperagent.pri  config.cpp  config.h  cookiejar.cpp  cookiejar.h  duperagent.cpp  duperagent.h  imageutils.cpp  imageutils.h  jsvalueiterator.h  multipartsource.cpp  multipartsource.h  networkactivityindicator.cpp  networkactivityindicator.h  networkactivityindicator_ios.mm  promise.cpp  promise.h  promisemodule.cpp  promisemodule.h  qpm.h  qpm.json  request.cpp  request.h  response.cpp  response.h  serialization.cpp  serialization.h  ssl.cpp  ssl.h
tests/: CMakeLists.txt  data.qrc  data.txt  tst_duperagent.cpp  tst_duperagent.pro  tst_duperagent.qml  tst_imageutils.qml  tst_promise.qml
